packages/lightning_db_dart/lib/src/native/lightning_db_bindings.dart


  int lightning_db_put_tx(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
  ) {
    return _lightning_db_put_tx(
      handle,
      key,
      key_len,
      value,
      value_len,
    );
  }

  late final _lightning_db_put_txPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('lightning_db_put_tx');
  late final _lightning_db_put_tx = _lightning_db_put_txPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int)>();

  int lightning_db_put_with_consistency(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
    int consistency_level,
  ) {
    return _lightning_db_put_with_consistency(
      handle,
      key,
      key_len,
      value,
      value_len,
      consistency_level,
    );
  }

  late final _lightning_db_put_with_consistencyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Int32)>>('lightning_db_put_with_consistency');
  late final _lightning_db_put_with_consistency =
      _lightning_db_put_with_consistencyPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>,
              int, int)>();

  int lightning_db_scan(
    int db_handle,
    ffi.Pointer<ffi.Uint8> start_key,
    int start_key_len,
    ffi.Pointer<ffi.Uint8> end_key,
    int end_key_len,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_scan(
      db_handle,
      start_key,
      start_key_len,
      end_key,
      end_key_len,
      out_handle,
    );
  }

  late final _lightning_db_scanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_scan');
  late final _lightning_db_scan = _lightning_db_scanPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>,
          int, ffi.Pointer<ffi.Uint64>)>();

  int lightning_db_sync(
    int handle,
  ) {
    return _lightning_db_sync(
      handle,
    );
  }

  late final _lightning_db_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_sync');
  late final _lightning_db_sync =
      _lightning_db_syncPtr.asFunction<int Function(int)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final LightningDbBindings _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>
      get lightning_db_abort_transaction =>
          _library._lightning_db_abort_transactionPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint64>)>>
      get lightning_db_begin_transaction =>
          _library._lightning_db_begin_transactionPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>
      get lightning_db_checkpoint => _library._lightning_db_checkpointPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
      get lightning_db_clear_error => _library._lightning_db_clear_errorPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>
      get lightning_db_close => _library._lightning_db_closePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>
      get lightning_db_commit_transaction =>
          _library._lightning_db_commit_transactionPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>>
      get lightning_db_create => _library._lightning_db_createPtr;
  ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Uint64>)>> get lightning_db_create_with_config =>
      _library._lightning_db_create_with_configPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>
      get lightning_db_delete => _library._lightning_db_deletePtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>
      get lightning_db_delete_tx => _library._lightning_db_delete_txPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ByteResult)>>
      get lightning_db_free_bytes => _library._lightning_db_free_bytesPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(KeyValueResult)>>
      get lightning_db_free_key_value =>
          _library._lightning_db_free_key_valuePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>
      get lightning_db_free_string => _library._lightning_db_free_stringPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ByteResult Function(
                  ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>
      get lightning_db_get => _library._lightning_db_getPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>
      get lightning_db_get_last_error =>
          _library._lightning_db_get_last_errorPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.UintPtr)>>
      get lightning_db_get_last_error_buffer =>
          _library._lightning_db_get_last_error_bufferPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ByteResult Function(
                  ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>
      get lightning_db_get_tx => _library._lightning_db_get_txPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ByteResult Function(
                  ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr, ffi.Int32)>>
      get lightning_db_get_with_consistency =>
          _library._lightning_db_get_with_consistencyPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function()>> get lightning_db_init =>
      _library._lightning_db_initPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>
      get lightning_db_iterator_close =>
          _library._lightning_db_iterator_closePtr;
  ffi.Pointer<ffi.NativeFunction<KeyValueResult Function(ffi.Uint64)>>
      get lightning_db_iterator_next => _library._lightning_db_iterator_nextPtr;
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>>
      get lightning_db_open => _library._lightning_db_openPtr;
  ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>> get lightning_db_put =>
      _library._lightning_db_putPtr;
  ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>> get lightning_db_put_tx =>
      _library._lightning_db_put_txPtr;
  ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Int32)>> get lightning_db_put_with_consistency =>
      _library._lightning_db_put_with_consistencyPtr;
  ffi.Pointer<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              ffi.Pointer<ffi.Uint64>)>> get lightning_db_scan =>
      _library._lightning_db_scanPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>
      get lightning_db_sync => _library._lightning_db_syncPtr;
}

/// Result structures
final class ByteResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> DATA;

  @ffi.UintPtr()
  external int LEN;

  @ffi.Int32()
  external int ERROR_CODE;
}

/// Enums from the original header
abstract class CompressionType {
  static const int CompressionTypeNone = 0;
  static const int CompressionTypeZstd = 1;
  static const int CompressionTypeLz4 = 2;
  static const int CompressionTypeSnappy = 3;
}

abstract class ConsistencyLevel {
  static const int ConsistencyLevelEventual = 0;
  static const int ConsistencyLevelStrong = 1;
}

abstract class ErrorCode {
  static const int ErrorCodeSuccess = 0;
  static const int ErrorCodeInvalidArgument = 1;
  static const int ErrorCodeDatabaseNotFound = 2;
  static const int ErrorCodeDatabaseExists = 3;
  static const int ErrorCodeTransactionNotFound = 4;
  static const int ErrorCodeTransactionConflict = 5;
  static const int ErrorCodeKeyNotFound = 6;
  static const int ErrorCodeIoError = 7;
  static const int ErrorCodeCorruptedData = 8;
  static const int ErrorCodeOutOfMemory = 9;
  static const int ErrorCodeUnknown = 999;
}

final class KeyValueResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> KEY;

  @ffi.UintPtr()
  external int KEY_LEN;

  external ffi.Pointer<ffi.Uint8> VALUE;

  @ffi.UintPtr()
  external int VALUE_LEN;

  @ffi.Int32()
  external int ERROR_CODE;
}

abstract class WalSyncMode {
  static const int WalSyncModeSync = 0;
  static const int WalSyncModePeriodic = 1;
  static const int WalSyncModeAsync = 2;
}
